Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPOaGHG39n9dKr2ZpMs2TNO",
+      "authorship_tag": "ABX9TyM9FI0TsE9MUZHJHqUfVZau",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# bitset を vector<int> にする\n",
-        "# vector を出力する\n",
+        "# reverseVec を作る c++\n",
+        "# 必要ないみたい ブランクでも通る\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "void vecout(vector<int> vec){\n",
+        "void vecCout(vector<int> vec){\n",
         "    cout << \"{\";\n",
         "    bool isFirst = true;\n",
         "    for (auto item : vec){\n",
@@ -55,32 +55,134 @@
         "    };\n",
         "    cout << \"}\" << endl;\n",
         "}\n",
-        " \n",
+        "\n",
         "int main() {\n",
-        "    bitset<4> bs(\"1111\");\n",
-        "    vector<int> vec;\n",
-        "    for(int item: bs){\n",
-        "        \n",
-        "    }\n",
-        "    vecout(vec);\n",
+        "    vector<int> vec = {3,2,1};\n",
+        "    vecCout(vec);\n",
+        "    cout << endl;\n",
+        "    reverse(vec.begin(),vec.end());\n",
+        "    vecCout(vec);\n",
         "}"
       ],
       "metadata": {
-        "id": "7m9Ylzs6YiGr"
+        "id": "oeOs9F1u_E7b",
+        "outputId": "5c856641-accc-4f2e-ae13-556a0cab2163",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "Q0SEADgSYiCk"
+        "id": "xC6hgBpZ_E24",
+        "outputId": "10ff3e08-a0ca-446d-f34b-292a4f3ac7df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{3, 2, 1}\n",
+            "\n",
+            "{1, 2, 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# bitset を vector<int> にする\n",
+        "# vector を出力する\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "void vecCout(vector<int> vec){\n",
+        "    cout << \"{\";\n",
+        "    bool isFirst = true;\n",
+        "    for (auto item : vec){\n",
+        "        if(!isFirst) cout << \", \";\n",
+        "        cout << item;\n",
+        "        isFirst = false;\n",
+        "    };\n",
+        "    cout << \"}\" << endl;\n",
+        "}\n",
+        "\n",
+        "vector<int> toNumVec(bitset<4> bs) {\n",
+        "    vector<int> vec;\n",
+        "    for (int i = 0; i < bs.size(); i++){\n",
+        "        if(bs.test(i)) vec.push_back(i);\n",
+        "    }\n",
+        "    return vec;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    bitset<4> bs(\"1110\");\n",
+        "    vector<int> vec;\n",
+        "    vec = toNumVec(bs);\n",
+        "    reverse(vec.begin(),vec.end());\n",
+        "    vecCout(vec);\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "7m9Ylzs6YiGr",
+        "outputId": "2bfd3ad7-6e66-459c-b8e1-51b72d1d427a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "Q0SEADgSYiCk",
+        "outputId": "5eb95df5-f6e1-48f4-a514-f99302b7255f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{3, 2, 1}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -90,7 +192,7 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "void vecout(vector<int> vec){\n",
+        "void vecCout(vector<int> vec){\n",
         "    cout << \"{\";\n",
         "    bool isFirst = true;\n",
         "    for (auto item : vec){\n",
@@ -103,17 +205,17 @@
         " \n",
         "int main() {\n",
         "    vector<int> vec = {1,2,3};\n",
-        "    vecout(vec);\n",
+        "    vecCout(vec);\n",
         "}"
       ],
       "metadata": {
         "id": "T2icdBHRPGO8",
-        "outputId": "c5bac20f-7045-4f22-cf71-936f7c720383",
+        "outputId": "9b6c8e18-4c95-4766-b06d-aa59317e5daa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,12 +233,12 @@
       ],
       "metadata": {
         "id": "Sx-esGZ0PGLE",
-        "outputId": "830f197c-dd35-44af-f1a8-4e62f0137314",
+        "outputId": "9fcc0db8-9ee0-414c-eb6a-cefec16f3ef9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
