--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOS8say8neWxURm1EU+qqsU",
+      "authorship_tag": "ABX9TyOoDekrh+5yGVmhYkThpxcU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,18 +107,10 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "OS-BSyUdm7S8"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 45 OR 25 = 61\n",
+        "# bit 演算の `|` の例\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -170,6 +162,140 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    tr td:nth-child(2) {\n",
+        "        color: red;\n",
+        "        text-align: center;\n",
+        "    }\n",
+        "</style>\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>ビット演算</th><th>演算子</th><th>意味</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>ビット毎のAND演算</td><td>&</td><td>各ビットについて「両方のビットが1ならば1」という操作を適用する。</td></tr>\n",
+        "<tr><td>ビット毎のOR演算</td><td>|</td><td>各ビットについて「少なくとも一方のビットが1ならば1」という操作を適用する。</td></tr>\n",
+        "<tr><td>ビット毎のXOR演算</td><td>^</td><td>各ビットについて「どちらか一方だけが1ならば1」という操作を適用する。</td></tr>\n",
+        "<tr><td>ビット毎のNOT演算</td><td>~</td><td>各ビットについて「ビットを反転する」という操作を適用する。</td></tr>\n",
+        "<tr><td>左シフト演算</td><td><<</td><td>指定したビット数だけビット列を左にずらす。範囲外のビットは切り捨てられ、足りないビットは0で埋められる。</td></tr>\n",
+        "<tr><td>右シフト演算</td><td>>></td><td>指定したビット数だけビット列を右にずらす。範囲外のビットは切り捨てられ、足りないビットは0で埋められる。</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "JsacjKHZoM5S",
+        "outputId": "93fb610c-b9d0-432b-8b57-fa1f54a1334d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 181
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    tr td:nth-child(2) {\n",
+              "        color: red;\n",
+              "        text-align: center;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>ビット演算</th><th>演算子</th><th>意味</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>ビット毎のAND演算</td><td>&</td><td>各ビットについて「両方のビットが1ならば1」という操作を適用する。</td></tr>\n",
+              "<tr><td>ビット毎のOR演算</td><td>|</td><td>各ビットについて「少なくとも一方のビットが1ならば1」という操作を適用する。</td></tr>\n",
+              "<tr><td>ビット毎のXOR演算</td><td>^</td><td>各ビットについて「どちらか一方だけが1ならば1」という操作を適用する。</td></tr>\n",
+              "<tr><td>ビット毎のNOT演算</td><td>~</td><td>各ビットについて「ビットを反転する」という操作を適用する。</td></tr>\n",
+              "<tr><td>左シフト演算</td><td><<</td><td>指定したビット数だけビット列を左にずらす。範囲外のビットは切り捨てられ、足りないビットは0で埋められる。</td></tr>\n",
+              "<tr><td>右シフト演算</td><td>>></td><td>指定したビット数だけビット列を右にずらす。範囲外のビットは切り捨てられ、足りないビットは0で埋められる。</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ビット毎のNOT演算\t~\t各ビットについて「ビットを反転する」という操作を適用する。\n",
+        "# をやってみる\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "    unsigned int a = 45;\n",
+        "    cout << \"NOT \" << a << \" = \" << (~a) << endl;\n",
+        "    cout <<  \"NOT \" << (bitset<16>)a << \" = \" << (bitset<16>)(~a) << endl;\n",
+        "    bitset<8> b(\"1111111111010010\");\n",
+        "    cout << b.to_ullong() << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "0Q9bUwKroSZc",
+        "outputId": "1fba42d7-81c8-42b4-8750-0e235388b9a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "kopEt2-JpF_G",
+        "outputId": "1459c64c-34aa-4630-ad17-338d4fe4592d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "NOT 45 = 4294967250\n",
+            "NOT 0000000000101101 = 1111111111010010\n",
+            "255\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "OS-BSyUdm7S8"
+      }
     },
     {
       "cell_type": "code",
