Colaboratory を使用して作成しました

--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMs/a1YjZ7Iwzxb31TTmWyf",
+      "authorship_tag": "ABX9TyMlLqIaSwPyTegRSJyqHmG1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,9 +34,15 @@
         "# メモ\n",
         "\n",
         "qiita \n",
-        "ビット演算 (bit 演算) の使い方を総特集！ 〜 マスクビットから bit DP まで 〜\n",
+        "ビット演算 (bit 演算) の使い方を総特集！ 〜 マスクビットから bit DP まで 〜 by 大槻 (通称、けんちょん) \n",
         "\n",
-        "https://qiita.com/drken/items/7c6ff2aa4d8fce1c9361\n"
+        "https://qiita.com/drken/items/7c6ff2aa4d8fce1c9361\n",
+        "\n",
+        "全探索について  \n",
+        "https://drken1215.hatenablog.com/entry/2019/12/14/171657\n",
+        "\n",
+        "問題集  \n",
+        "https://algo-method.com/courses/5\n"
       ],
       "metadata": {
         "id": "uRUG0WU88C6h"
@@ -267,7 +273,7 @@
         "id": "0Q9bUwKroSZc",
         "outputId": "38504b2d-2264-46dd-961c-1a5bf21bee1b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +296,7 @@
         "id": "kopEt2-JpF_G",
         "outputId": "28dfe4c0-ff77-46db-a59b-6b58271bb914"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,15 +308,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "OS-BSyUdm7S8"
-      }
     },
     {
       "cell_type": "code",
@@ -1256,7 +1253,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 実験 全探索\n",
+        "# 実験 全探索の準備\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1264,10 +1261,12 @@
         "int main() {\n",
         "    int n = 3;\n",
         "    cout << (1<<3) << endl;\n",
+        "    // これと\n",
         "    for (int bit = 0; bit < (1<<n); ++bit){\n",
         "        cout << bit << endl;\n",
         "    }\n",
         "\n",
+        "    // これが本質的には同じことをやっている => 全探索とは数え上げること\n",
         "    for (int tmp = 0; tmp < (1 << 3); tmp++) {\n",
         "        bitset<3> s(tmp);\n",
         "        cout << s << endl;\n",
@@ -1343,8 +1342,9 @@
         "int main() {\n",
         "    for (int tmp = 0; tmp < (1 << 3); tmp++) {\n",
         "        bitset<3> s(tmp);\n",
-        "        cout << s.to_ullong() << endl;\n",
+        "        cout << s.to_ullong();\n",
         "    }\n",
+        "    cout  << endl;\n",
         "}"
       ],
       "metadata": {
@@ -1352,9 +1352,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "47b77889-665c-47b2-d229-c28f60ab8e16"
+        "outputId": "a19760da-0750-40f8-b79b-606091ac1ed3"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1375,22 +1375,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GQ30Tkz9zLM0",
-        "outputId": "1f60b828-ed14-4d25-ee94-232abc5163dc"
+        "outputId": "800baf29-8774-4346-8bd4-a8cc100ebba3"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n"
+            "01234567\n"
           ]
         }
       ]
@@ -1479,15 +1472,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "phiBD4_Q6tJj"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# bit 全探索実験\n",
@@ -1523,18 +1507,18 @@
       ],
       "metadata": {
         "id": "lIWueRWL6nts",
-        "outputId": "5a6adc17-b447-442c-d171-7658c7947754",
+        "outputId": "b9dc2053-b300-4b39-fdc2-bff4cb9d1ae5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.cpp\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ]
@@ -1545,16 +1529,67 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "_8UUu6DaflFW"
+        "id": "_8UUu6DaflFW",
+        "outputId": "4b44f466-35c4-44fd-e5f2-30a91694c916",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0: {}\n",
+            "1: {0 }\n",
+            "2: {1 }\n",
+            "3: {0 1 }\n",
+            "4: {2 }\n",
+            "5: {0 2 }\n",
+            "6: {1 2 }\n",
+            "7: {0 1 2 }\n",
+            "8: {3 }\n",
+            "9: {0 3 }\n",
+            "10: {1 3 }\n",
+            "11: {0 1 3 }\n",
+            "12: {2 3 }\n",
+            "13: {0 2 3 }\n",
+            "14: {1 2 3 }\n",
+            "15: {0 1 2 3 }\n",
+            "16: {4 }\n",
+            "17: {0 4 }\n",
+            "18: {1 4 }\n",
+            "19: {0 1 4 }\n",
+            "20: {2 4 }\n",
+            "21: {0 2 4 }\n",
+            "22: {1 2 4 }\n",
+            "23: {0 1 2 4 }\n",
+            "24: {3 4 }\n",
+            "25: {0 3 4 }\n",
+            "26: {1 3 4 }\n",
+            "27: {0 1 3 4 }\n",
+            "28: {2 3 4 }\n",
+            "29: {0 2 3 4 }\n",
+            "30: {1 2 3 4 }\n",
+            "31: {0 1 2 3 4 }\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "FHFWSx5QJMWD"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "# 部分集合全探索を bitset で書き直す \n",
-        "# 上のプログラムをそのままなぞったのであまり美しくない\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1583,12 +1618,12 @@
       ],
       "metadata": {
         "id": "zkPFUaIKfvO7",
-        "outputId": "3488c8ac-f768-472d-a758-079e92dfc6d9",
+        "outputId": "9bbfe7b3-7436-43cc-c9b4-2e53d36cc7fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1605,10 +1640,53 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "20QaFvgDfvHa"
+        "id": "20QaFvgDfvHa",
+        "outputId": "79514112-4273-4004-8a03-80612b04fbfa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0: {}\n",
+            "1: {0 }\n",
+            "2: {1 }\n",
+            "3: {0 1 }\n",
+            "4: {2 }\n",
+            "5: {0 2 }\n",
+            "6: {1 2 }\n",
+            "7: {0 1 2 }\n",
+            "8: {3 }\n",
+            "9: {0 3 }\n",
+            "10: {1 3 }\n",
+            "11: {0 1 3 }\n",
+            "12: {2 3 }\n",
+            "13: {0 2 3 }\n",
+            "14: {1 2 3 }\n",
+            "15: {0 1 2 3 }\n",
+            "16: {4 }\n",
+            "17: {0 4 }\n",
+            "18: {1 4 }\n",
+            "19: {0 1 4 }\n",
+            "20: {2 4 }\n",
+            "21: {0 2 4 }\n",
+            "22: {1 2 4 }\n",
+            "23: {0 1 2 4 }\n",
+            "24: {3 4 }\n",
+            "25: {0 3 4 }\n",
+            "26: {1 3 4 }\n",
+            "27: {0 1 3 4 }\n",
+            "28: {2 3 4 }\n",
+            "29: {0 2 3 4 }\n",
+            "30: {1 2 3 4 }\n",
+            "31: {0 1 2 3 4 }\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
