--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMlLqIaSwPyTegRSJyqHmG1",
+      "authorship_tag": "ABX9TyMB3+LJSJi9eqmki1Yp1J01",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1354,7 +1354,7 @@
         },
         "outputId": "a19760da-0750-40f8-b79b-606091ac1ed3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1377,7 +1377,7 @@
         "id": "GQ30Tkz9zLM0",
         "outputId": "800baf29-8774-4346-8bd4-a8cc100ebba3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1512,7 +1512,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1535,7 +1535,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1578,15 +1578,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "FHFWSx5QJMWD"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 部分集合全探索を bitset で書き直す \n",
@@ -1594,36 +1585,43 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
+        "vector<int> toNumVec(bitset<5> bs) {\n",
+        "    vector<int> vec;\n",
+        "    for (int i = 0; i < bs.size(); i++){\n",
+        "        if(bs.test(i)) vec.push_back(i);\n",
+        "    }\n",
+        "    return vec;\n",
+        "}\n",
+        "\n",
+        "string formatVecInt2Str(vector<int> vec){\n",
+        "    string str = \"\";\n",
+        "    str +=\"{\";\n",
+        "    bool isFirst = true;\n",
+        "    for (auto item : vec){\n",
+        "        if(!isFirst) str += \", \";\n",
+        "        str += to_string(item);\n",
+        "        isFirst = false;\n",
+        "    };\n",
+        "    str += \"}\";\n",
+        "    return str;\n",
+        "}\n",
+        "\n",
         "int main() {\n",
         "    const int n = 5;\n",
-        "   \n",
-        "    for (int bit = 0; bit < (1<<n); ++bit) {\n",
-        "        vector<int> S;\n",
-        "        bitset<n> s(bit);\n",
-        "\n",
-        "        for (int i = 0; i < n; ++i) {\n",
-        "            if (s.test(i)) {\n",
-        "                S.push_back(i);\n",
-        "            }\n",
-        "        }\n",
-        "\n",
-        "        // bit の表す集合の出力\n",
-        "        cout << bit << \": {\";\n",
-        "        for (int i = 0; i < (int)S.size(); ++i) {\n",
-        "            cout << S[i] << \" \";\n",
-        "        }\n",
-        "        cout << \"}\" << endl;\n",
+        "    for (int tmp = 0; tmp < (1 << n); tmp++) {\n",
+        "        bitset<n> s(tmp);\n",
+        "        cout << tmp << \": \" << formatVecInt2Str(toNumVec(s)) << endl;\n",
         "    }\n",
-        "}"
+        "}\n"
       ],
       "metadata": {
         "id": "zkPFUaIKfvO7",
-        "outputId": "9bbfe7b3-7436-43cc-c9b4-2e53d36cc7fa",
+        "outputId": "8467e8be-2257-4f9b-915f-746abd6d50fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1640,53 +1638,117 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "20QaFvgDfvHa",
-        "outputId": "79514112-4273-4004-8a03-80612b04fbfa",
+        "id": "20QaFvgDfvHa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# コーヒーフレーバーの全組み合わせ\n",
+        "# ミルク 砂糖 シナモン ウィスキー とする\n",
+        "# 部分集合全探索を bitset で書き直す \n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "vector<string> toStrVec(bitset<4> bs) {\n",
+        "    vector<string> flavor ={\"ミルク\",\"砂糖\",\"シナモン\",\"ウィスキー\"};\n",
+        "    vector<string> vec;\n",
+        "    for (int i = 0; i < bs.size(); i++){\n",
+        "        if(bs.test(i)) {\n",
+        "            vec.push_back(flavor.at(i));\n",
+        "        }\n",
+        "    }\n",
+        "    return vec;\n",
+        "}\n",
+        "\n",
+        "string formatVecStr2Str(vector<string> vec){\n",
+        "    string str = \"\";\n",
+        "    str +=\"{\";\n",
+        "    bool isFirst = true;\n",
+        "    for (auto item : vec){\n",
+        "        if(!isFirst) str += \", \";\n",
+        "        str += item;\n",
+        "        isFirst = false;\n",
+        "    };\n",
+        "    str += \"}\";\n",
+        "    return str;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    const int n = 4;\n",
+        "    for (int tmp = 0; tmp < (1 << n); tmp++) {\n",
+        "        bitset<n> s(tmp);\n",
+        "        cout << tmp << \": \" << formatVecStr2Str(toStrVec(s)) << endl;\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "eZpQBeYKXWby",
+        "outputId": "24f17e43-c3fe-4740-b5be-bcea9a7ff3d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "2GBSCDgSYJQe",
+        "outputId": "c5310f4e-1758-4061-efe0-cf0c5ae21a38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "0: {}\n",
-            "1: {0 }\n",
-            "2: {1 }\n",
-            "3: {0 1 }\n",
-            "4: {2 }\n",
-            "5: {0 2 }\n",
-            "6: {1 2 }\n",
-            "7: {0 1 2 }\n",
-            "8: {3 }\n",
-            "9: {0 3 }\n",
-            "10: {1 3 }\n",
-            "11: {0 1 3 }\n",
-            "12: {2 3 }\n",
-            "13: {0 2 3 }\n",
-            "14: {1 2 3 }\n",
-            "15: {0 1 2 3 }\n",
-            "16: {4 }\n",
-            "17: {0 4 }\n",
-            "18: {1 4 }\n",
-            "19: {0 1 4 }\n",
-            "20: {2 4 }\n",
-            "21: {0 2 4 }\n",
-            "22: {1 2 4 }\n",
-            "23: {0 1 2 4 }\n",
-            "24: {3 4 }\n",
-            "25: {0 3 4 }\n",
-            "26: {1 3 4 }\n",
-            "27: {0 1 3 4 }\n",
-            "28: {2 3 4 }\n",
-            "29: {0 2 3 4 }\n",
-            "30: {1 2 3 4 }\n",
-            "31: {0 1 2 3 4 }\n"
+            "1: {ミルク}\n",
+            "2: {砂糖}\n",
+            "3: {ミルク, 砂糖}\n",
+            "4: {シナモン}\n",
+            "5: {ミルク, シナモン}\n",
+            "6: {砂糖, シナモン}\n",
+            "7: {ミルク, 砂糖, シナモン}\n",
+            "8: {ウィスキー}\n",
+            "9: {ミルク, ウィスキー}\n",
+            "10: {砂糖, ウィスキー}\n",
+            "11: {ミルク, 砂糖, ウィスキー}\n",
+            "12: {シナモン, ウィスキー}\n",
+            "13: {ミルク, シナモン, ウィスキー}\n",
+            "14: {砂糖, シナモン, ウィスキー}\n",
+            "15: {ミルク, 砂糖, シナモン, ウィスキー}\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "1bNoMW4LZux8"
+      }
     },
     {
       "cell_type": "code",
