Colaboratory を使用して作成しました

--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMB3+LJSJi9eqmki1Yp1J01",
+      "authorship_tag": "ABX9TyMTl04INW0dgNvBsKak/KHS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1621,7 +1621,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1692,7 +1692,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,7 +1715,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1742,100 +1742,192 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "1bNoMW4LZux8"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 確かに {0, 1, 2, 3, 4} の部分集合をすべて列挙できていますね。\n",
         "\n",
-        "それでは bit 全探索を用いて具体的な問題を解いてみたいと思います。\n",
-        "組合せ最適化の分野では非常に有名な問題で、効率よく解けるアルゴリズムは恐らく\n",
-        "存在しないと広く信じられています。もし万が一この問題を効率よく解けるアルゴリズムが開発できたならば、\n",
-        "世界中のセキュリティを支えているRSA公開鍵暗号を効率よく解読するアルゴリズムも開発できることがわかっており、\n",
-        "そのインパクトは半端ではないです。ノーベル賞も夢じゃないです。この辺りの事情に興味のある方は\n",
-        "NP完全問題について調べていただければと思います。\n",
+        "# それでは bit 全探索を用いて具体的な問題を解いてみたいと思います。\n",
+        "# 組合せ最適化の分野では非常に有名な問題で、効率よく解けるアルゴリズムは恐らく\n",
+        "# 存在しないと広く信じられています。もし万が一この問題を効率よく解けるアルゴリズムが開発できたならば、\n",
+        "# 世界中のセキュリティを支えている RSA 公開鍵暗号を効率よく解読するアルゴリズムも開発できることがわかっており、\n",
+        "# そのインパクトは半端ではないです。ノーベル賞も夢じゃないです。この辺りの事情に興味のある方は\n",
+        "# NP 完全問題について調べていただければと思います。\n",
         "\n",
-        "部分和問題\n",
-        "nn 個の整数 a[0],a[1],…,a[n−1]a[0],a[1],…,a[n−1] が与えられる。\n",
-        "これらの整数から何個かの整数を選んで総和を KK とすることができるかどうかを判定せよ。\n",
-        "\n",
-        "【制約】\n",
-        "・1≤n≤201≤n≤20\n",
-        "・1≤a[i]≤10001≤a[i]≤1000\n",
-        "・1≤K≤10001≤K≤1000\n",
-        "\n",
-        "【数値例】\n",
-        "1)\n",
-        "　n=3n=3\n",
-        "　a=(7,2,9)a=(7,2,9)\n",
-        "　K=11K=11\n",
-        "　答え: Yes (2 と 9 を選べばよいです)\n",
-        "\n",
-        "2)\n",
-        "　n=2n=2\n",
-        "　a=(5,7)a=(5,7)\n",
-        "　K=11K=11\n",
-        "　答え: No\n",
-        "\n",
-        "nn 個の要素からなる集合 {a[0],a[i],…,a[n−1]a[0],a[i],…,a[n−1]} の部分集合をすべて列挙して調べ上げましょう。\n",
-        "ここまでで整理した集合演算技法を用いて、以下のように実装できます。\n",
-        "\n",
-        "#include <iostream>\n",
+        "# 部分和問題\n",
+        "# n 個の整数 a[0],a[1],…,a[n−1] が与えられる。\n",
+        "# これらの整数から何個かの整数を選んで総和を K とすることができるかどうかを判定せよ。\n",
+        "# 例 n=3 a=(7,2,9) K=11 => Yes\n",
+        "# 例2 n=2 a=(5,7) K=11 => No\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "/* 入力 */\n",
-        "int n;\n",
-        "int a[25]; // 余裕をもってサイズ 25 に\n",
-        "int K;\n",
-        "\n",
         "int main() {\n",
+        "    int n;\n",
+        "    int a[25]; // 余裕をもってサイズ 25 に\n",
+        "    int K;\n",
         "    cin >> n;\n",
         "    for (int i = 0; i < n; ++i) cin >> a[i];\n",
         "    cin >> K;\n",
-        "\n",
-        "    // 全探索 --- bit は {0, 1, ..., n-1} の 2^n 通りの部分集合全体を動きます。\n",
         "    bool exist = false;\n",
-        "    for (int bit = 0; bit < (1<<n); ++bit)\n",
-        "    {\n",
+        "    for (int bit = 0; bit < (1<<n); ++bit) {\n",
         "        int sum = 0; // 部分集合の和\n",
         "        for (int i = 0; i < n; ++i) {\n",
-        "            if (bit & (1<<i)) { // i が S に入っているなら足す\n",
+        "            if (bit & (1<<i)) { \n",
         "                sum += a[i];\n",
         "            }\n",
         "        }\n",
+        "        if (sum == K) exist = true;\n",
+        "    }\n",
+        "    if (exist) cout << \"Yes\" << endl;\n",
+        "    else cout << \"No\" << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "73umDOlHfLrb",
+        "outputId": "cdad3805-7200-4f94-ea67-3b686fc761c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 7 2 9 11 |./a.out #=> Yes\n",
+        "!g++ temp.cpp; echo 2 5 7 11 |./a.out #=> No"
+      ],
+      "metadata": {
+        "id": "D0uLaKSKj8vG",
+        "outputId": "9713b64b-4d03-4f0d-d4ba-c24c32025a2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n",
+            "No\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# bitset で書き直す\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
         "\n",
-        "        // sum が K に一致するか\n",
+        "int main() {\n",
+        "    int n;\n",
+        "    vector<int> a(25); // 余裕をもってサイズ 25 に\n",
+        "    int K;\n",
+        "    cin >> n;\n",
+        "    for (int i = 0; i < n; ++i) cin >> a.at(i);\n",
+        "    cin >> K;\n",
+        "    bool exist = false;\n",
+        "\n",
+        "    for (int tmp = 0; tmp < (1 << 3); tmp++) {\n",
+        "        bitset<3> s(tmp);\n",
+        "        int sum = 0;\n",
+        "        for (int i = 0; i < n; i++){\n",
+        "            if (s.test(i)) sum += a.at(i);\n",
+        "        }\n",
         "        if (sum == K) exist = true;\n",
         "    }\n",
         "\n",
         "    if (exist) cout << \"Yes\" << endl;\n",
         "    else cout << \"No\" << endl;\n",
-        "}\n",
-        "さて、この解法では例えば n=100 となると計算時間的に破綻してしまいます。\n",
-        "for 文のループ回数が 2n 回あるのですが、\n",
-        "2100=1,267,650,600,228,229,401,496,703,205,376\n",
-        "2100=1,267,650,600,228,229,401,496,703,205,376 \n",
-        "であり、1秒間で処理できる回数は最大でも 1,000,000,0001,000,000,000 回程度なので到底無理です。\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "u74dYjB0lvRW",
+        "outputId": "78579735-e790-4c9c-a9bb-846c3da49695",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 7 2 9 11 |./a.out #=> Yes\n",
+        "!g++ temp.cpp; echo 2 5 7 11 |./a.out #=> No"
+      ],
+      "metadata": {
+        "id": "DxFpqNCjl2Gg",
+        "outputId": "7bc76fb6-8c05-47d7-fda4-f27f5dbffc23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n",
+            "No\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "kg6BOfB_n4zu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# さて、この解法では例えば n=100 となると計算時間的に破綻してしまいます。\n",
+        "# for 文のループ回数が 2n 回あるのですが、\n",
+        "# 2^100 = 1,267,650,600,228,229,401,496,703,205,376\n",
+        "# であり、1秒間で処理できる回数は最大でも 1,000,000,0001,000,000,000 回程度なので到底無理です。\n",
         "\n",
-        "しかしなんと、この問題は n=100 程度でも解くことのできる解法があります！！！ \n",
-        "(しかしこれでもまだ効率よく解けると認められる解法ではないです)。\n",
-        "興味のある方は擬多項式時間アルゴリズムについて調べるとともに、以下の記事を読んでいただけたらと思います:\n",
+        "# しかしなんと、この問題は n=100 程度でも解くことのできる解法があります！！！ \n",
+        "# (しかしこれでもまだ効率よく解けると認められる解法ではないです)。\n",
+        "# 興味のある方は擬多項式時間アルゴリズムについて調べるとともに、以下の記事を読んでいただけたらと思います:\n",
         "\n",
-        "典型的な DP (動的計画法) のパターンを整理 Part1 ～ ナップサック DP 編 ～\n",
+        "# 典型的な DP (動的計画法) のパターンを整理 Part1 ～ ナップサック DP 編 ～\n",
         "\n",
-        "7. 与えられた部分集合の部分集合を列挙\n",
-        "bit 全探索は {0,1,…,n−10,1,…,n−1} の部分集合を列挙するアルゴリズムでした。\n",
-        "今度は、例えば n=10n=10 として、{2,3,5,72,3,5,7} のように必ずしも 0,1,…,90,1,…,9 の\n",
-        "すべてが揃っているわけではない集合が与えられて、その部分集合を列挙する方法を考えます。\n",
+        "# 7. 与えられた部分集合の部分集合を列挙\n",
+        "# bit 全探索は {0,1,…,n−10,1,…,n−1} の部分集合を列挙するアルゴリズムでした。\n",
+        "# 今度は、例えば n=10 として、{2,3,5,72,3,5,7} のように必ずしも 0,1,…,9 の\n",
+        "# すべてが揃っているわけではない集合が与えられて、その部分集合を列挙する方法を考えます。\n",
         "\n",
-        "これは次のように実現できます:\n",
+        "# これは次のように実現できます:\n",
         "\n",
         "int main() {\n",
         "    int n = 10;\n",
@@ -1848,7 +1940,29 @@
         "        // 最後の 0 で break\n",
         "        if (!bit) break;\n",
         "    }\n",
-        "}\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "xV2m4l7Pj7Ja"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "8bY_DPq3okf-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "確かめてみましょう。\n",
         "\n",
         "int main() {\n",
@@ -2530,7 +2644,7 @@
         "1"
       ],
       "metadata": {
-        "id": "73umDOlHfLrb"
+        "id": "M6JzIeUooi78"
       },
       "execution_count": null,
       "outputs": []
