Colaboratory を使用して作成しました

--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_bit.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbYK5GX+1vZrOMhzmKg5TG",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyP+fzhIOo60cFF5lYAVBtsx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1978,7 +1979,7 @@
       ],
       "metadata": {
         "id": "M6JzIeUooi78",
-        "outputId": "8642b56d-6c22-4496-9e38-81f70bc2c6e1",
+        "outputId": "a12fe908-d58a-4f97-a568-f1909f767d32",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2000,10 +2001,37 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "4ezuLVGLsVKr"
+        "id": "4ezuLVGLsVKr",
+        "outputId": "1058e55a-b82c-431e-aae7-d004bb300ee9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "172: {2 3 5 7 }\n",
+            "168: {3 5 7 }\n",
+            "164: {2 5 7 }\n",
+            "160: {5 7 }\n",
+            "140: {2 3 7 }\n",
+            "136: {3 7 }\n",
+            "132: {2 7 }\n",
+            "128: {7 }\n",
+            "44: {2 3 5 }\n",
+            "40: {3 5 }\n",
+            "36: {2 5 }\n",
+            "32: {5 }\n",
+            "12: {2 3 }\n",
+            "8: {3 }\n",
+            "4: {2 }\n",
+            "0: {}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2048,7 +2076,8 @@
         "}\n",
         "\n",
         "int main() {\n",
-        "    const int n = 4;\n",
+        "    const int n = 10;\n",
+        "    vector<int> vec = {2,3,5,7};\n",
         "    for (int tmp = 0; tmp < (1 << n); tmp++) {\n",
         "        bitset<n> s(tmp);\n",
         "        cout << tmp << \": \" << formatVecStr2Str(toStrVec(s)) << endl;\n",
