Colaboratory を使用して作成しました

--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP+fzhIOo60cFF5lYAVBtsx",
+      "authorship_tag": "ABX9TyNzApMOr5VvjXkhgSPEf0Bh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1984,7 +1984,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2007,7 +2007,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2029,6 +2029,82 @@
             "8: {3 }\n",
             "4: {2 }\n",
             "0: {}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 実験 理解用\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "    const int n = 10;\n",
+        "    int A = (1<<2) | (1<<3) | (1<<5) | (1<<7); // {A = {2, 3, 5, 7}\n",
+        "    bitset<n> s(A);\n",
+        "    cout << A << endl;\n",
+        "    cout << s << endl; //=> 0010101100 : 4+8+32+128 => 172\n",
+        "    cout << endl;\n",
+        "    int count = 0;\n",
+        "    for(int bit = A; ; bit = (bit-1) & A) { // の意味は 2項目を省略すると while true と同じになる\n",
+        "        cout << (bitset<10>)bit << endl ;\n",
+        "        count++;\n",
+        "        if (count == 10) break;\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "jwurXuJQvftU",
+        "outputId": "98495528-f949-43a5-d80b-bfaffa8701d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "-SikOPOFvse3",
+        "outputId": "a5c829c3-1dab-4d4f-ec44-b089d8e55708",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "172\n",
+            "0010101100\n",
+            "\n",
+            "0010101100\n",
+            "0010101000\n",
+            "0010100100\n",
+            "0010100000\n",
+            "0010001100\n",
+            "0010001000\n",
+            "0010000100\n",
+            "0010000000\n",
+            "0000101100\n",
+            "0000101000\n"
           ]
         }
       ]
